fix issue with overflow on what container

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -653,13 +653,13 @@ body {
 
     &__title{
       text-align: center;
-      width: 100%;
       padding: 5px 10px;
 
       &--wrap{
         display: flex;
         align-items: center;
         flex-direction: column;
+        flex-wrap:wrap;
         justify-content: center;
         background-color: rgba($text-black, 0.6);
         height: 100%;
@@ -730,14 +730,6 @@ body {
         @media all and (min-width: $large-breakpoint) {
           padding: 20px 40px;
         }
-      }
-
-      &__title{
-
-      }
-
-      &__text{
-
       }
     }
 
